# filesystem-full-text-search-indexer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.txt.example
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
app/: Index.cpp  Index_Add.cpp  Index_Merge.cpp  Index_Search.cpp  Index_Transaction.cpp  LocalIndex.cpp  Search.cpp  functions.h  helper.cpp  index.cpp  index_config.h  indexer.cpp  local_index.cpp  logger.cpp  main.cpp
app/CliParser/: CliParser.cpp  cliparser.h
app/Config/: Config.cpp  config.h
app/Helper/: Helper.cpp  helper.h
app/Index/: Index.cpp  Index_Add.cpp  Index_Check.cpp  Index_Last_Updated.cpp  Index_Lock.cpp  Index_Merge.cpp  Index_Search.cpp  Index_Transaction.cpp  index.h  index_types.h
app/Index/DiskIO/: DiskIO.cpp  DiskIO_Additional.cpp  DiskIO_Move.cpp  DiskIO_Paths.cpp  DiskIO_PathsCount.cpp  DiskIO_Public_Getters.cpp  DiskIO_Reversed.cpp  DiskIO_Words.cpp  DiskIO_WordsF.cpp
app/Indexer/: Indexer.cpp  index_types.h  indexer.cpp  indexer.h
app/LocalIndex/: LocalIndex.cpp  localindex.h  localindex_types.h
app/Logging/: Logger.cpp  logger.cpp  logging.h
app/Search/: Search.cpp  search.h
docs/: Config-Values.md  Disk-Structure.md  Index-Checks.md  Index-Locking.md  Integration-Tests.md  Merging.md  Multi-Threading.md  Query-Language.md  Searching.md  System-Requirements.md  Testing.md  index-searching.md  index_on_disk_structure.md
tests/: run_tests.sh
